# julie_neurons

./: .gitignore  README.md  license_headers.txt
dataset/: Dataset.hpp  Mnist.cpp  Mnist.hpp
demo/conv2d/: CMakeLists.txt  README.md  conv2d.hpp  main.cpp
demo/conv2d_L1_regular/: README.md  conv2d.hpp
demo/conv2d_no_pool/: CMakeLists.txt  README.md  conv2d.hpp  main.cpp
demo/fc_circle/: CMakeLists.txt  README.md  fc.hpp  main.cpp
demo/fc_linear_regression/: README.md  fully_connected.hpp
demo/fc_multiple_loss/: CMakeLists.txt  README.md  fc.hpp  main.cpp
demo/fc_prune/: CMakeLists.txt  README.md  fully_connected.hpp  main.cpp
demo/fc_resnet/: CMakeLists.txt  README.md  fc.hpp  main.cpp
demo/fc_shared_weight/: CMakeLists.txt  README.md  fc.hpp  main.cpp
demo/fully_connected/: CMakeLists.txt  README.md  fully_connected.hpp  main.cpp
demo/googlenet/: CMakeLists.txt  README.md  conv2d.hpp  main.cpp
demo/naive_adaptive_forward_seeding/: CMakeLists.txt  README.md  main.cpp  nafs.hpp
julie_neurons/: CMakeLists.txt  README.md  clean.sh
julie_neurons/julie/: utilities.hpp
julie_neurons/julie/la/: Activations.cpp  Activations.hpp  Activations_adv.cpp  Activations_adv.hpp  Conv2d.cpp  Conv2d.hpp  Conv2dCuDNN.cu  Conv2dCuDNN.hpp  Conv2dOneDNN.cpp  Conv2dOneDNN.hpp  Coordinate.cpp  Coordinate.hpp  DMatrix.cpp  DMatrix.hpp  DMatrix_Iterator.hpp  DMatrix_adv.hpp  Exceptions.hpp  Losses.cpp  Losses.hpp  OneDNNHelper.cpp  OneDNNHelper.hpp  Pool2dOneDNN.cpp  Pool2dOneDNN.hpp  SLMatrix.cpp  SLMatrix.hpp  SLMatrixTuple.cpp  SLMatrixTuple.hpp  Shape.cpp  Shape.hpp  Vector.cpp  Vector.hpp  iMatrix.cpp  iMatrix.hpp  iMatrix_func.cpp  iMatrix_func.hpp  iMatrix_func_adv.cpp  iMatrix_func_adv.hpp
julie_neurons/julie/la/cpu/: Activations_CPU.cpp  Activations_CPU.hpp  Activations_CPU_adv.cpp  Activations_CPU_adv.hpp  Losses_CPU.cpp  Losses_CPU.hpp  Matrix_CPU.cpp  Matrix_CPU.cu  Matrix_CPU.hpp  Matrix_CPU_Iterator.hpp  Matrix_CPU_func.cpp  Matrix_CPU_func.hpp  Matrix_CPU_func_adv.cpp  Matrix_CPU_func_adv.hpp  SLMatrix.hpp  SLMatrixTuple.hpp
julie_neurons/julie/la/cuda/: Activations_CUDA.cu  Activations_CUDA.hpp  Activations_CUDA_adv.cu  Activations_CUDA_adv.hpp  Losses_CUDA.cu  Losses_CUDA.hpp  Matrix_CUDA.cu  Matrix_CUDA.hpp  Matrix_CUDA_func.cu  Matrix_CUDA_func.hpp  Matrix_CUDA_func_adv.cu  Matrix_CUDA_func_adv.hpp  act.cuh  act_adv.cuh  add.cuh  assign.cuh  concat.cuh  cuda_utility.cuh  divide.cuh  loss.cuh  matmul.cuh  memcpy.cuh  multiply.cuh  nsqrt.cpp  nsqrt.hpp  stat.cuh  subtract.cuh  transpose.cuh
julie_neurons/julie/nn/func/: abs.cpp  abs.hpp  add.cpp  add.hpp  arctan.cpp  arctan.hpp  avgpool.cpp  avgpool.hpp  concat.cpp  concat.hpp  conv2d_op.cpp  conv2d_op.hpp  half_squareerror.cpp  half_squareerror.hpp  matmul.cpp  matmul.hpp  maxpool.cpp  maxpool.hpp  multiply.cpp  multiply.hpp  prelu.cpp  prelu.hpp  relu.cpp  relu.hpp  scalar_add.cpp  scalar_add.hpp  scale.cpp  scale.hpp  sigmoid.cpp  sigmoid.hpp  sigmoid_crossentropy.cpp  sigmoid_crossentropy.hpp  softmax.cpp  softmax.hpp  softmax_crossentropy.cpp  softmax_crossentropy.hpp  sum.cpp  sum.hpp  tanh.cpp  tanh.hpp
julie_neurons/julie/nn/opt/: optimizer.cpp  optimizer.hpp  sgd.cpp  sgd.hpp
julie_neurons/julie/nn/var/: scalar.cpp  scalar.hpp  tensor.cpp  tensor.hpp
julie_neurons/julie/op/: function.cpp  function.hpp  graph.cpp  graph.hpp  variable.cpp  variable.hpp
test/: CMakeLists.txt  README.md  conv2d_cases.hpp  conv2d_cuda_cases.hpp  conv2d_cudnn_cases.hpp  conv2d_onednn_cases.hpp  dmatrix_adv_cases.hpp  dmatrix_cases.hpp  fully_connected_cases.hpp  graph_cases.hpp  matrix_cpu_adv_cases.hpp  matrix_cpu_cases.hpp  matrix_cuda_adv_cases.hpp  matrix_cuda_cases.hpp  random_smatrix.hpp  slmatrix_cases.hpp  test.cpp  test_util.hpp
